umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rdkit_github1251.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 39
bond_count: 44
sum_formula: C26HN4O5S2Tc+1
graph6: "fs???A?_????AC?G_C?@??C@??`??O??_?G@?A???O??_?????D???B???A????O????KEC????G???A???C????A?????G????A?????B?????C?O????????_??"
