umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rdkit_glythrgly.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 32
bond_count: 31
sum_formula: C8H15N3O6
graph6: _iCGGCA?G?_A?G??_?G?A??E???_??_??G???G???_??@???@???@????_???C????C????O????O????O??
