umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rdkit_mol_with_pickle_error.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 112
bond_count: 305
sum_formula: C19H84BrN8-1
graph6: "~?@oi_GQ?@?OAO?OOOOO?_?@??Ho????G??G??Ca??A??GGG??_@??????_???RAAG?????C????O????c?@??@@???OO?@?CC???_A?????@?????ASO`B????????G?????A??????QG??A??A??G??AA??G?_?AI??O?KC?????A?GO?????@GFW?aC???O?????@?O?????@?G??????c?@???O??OO??C??@@@????@?CC?HOEA???_???C????C??_?????A[??y?COo????G??????_??_?????A??@??????Ca???_??G??G??_A????AAA???_??G??_?KC?Q_?C????_???????G?????O????QaC?W?@sGG_??????@????@??????O????O?????A????AO?C?O????O??OO????O@???OO?@???O??C?OP__?S??_??G?_O??????????@????_???????H_@C?Mo@CGOo??????_???????G????_???????G????O???????Ca????A?G??A?????????????????????????????@?????????????A?????????????A??????????????G?????????????B??????????????C??????????????O?????????????Q??????????????B???????????????@???????????????O?????????????A_??????????????GP???????????????@???????????????@?????????????@GG??????????????UC[???????????????@C?????????????G??O?????????????Bj@???????????????A?C??????????????O?A??????????????]BO???????????????_??_???????????????_A?????????????BOsG??????????????A????_??????????????G??O??????????????????"
