umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rdkit_perchlorate1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 51
bond_count: 57
sum_formula: C39ClN3O7P
graph6: "rqO@_?C_?@?_AA???_GOA?AOA??A??@??@???O??A?????G?@?@?C???A????_???@?????C????G???????????B????@O????A????C?????O?????O?????A??????_?????G???????G???????_?????C???????G?????@???????A???????C????????`???????K???????H?"
